--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<div id="signature"> 
 
   			<object>
-				<embed id="sign" src="signature.svg">	
+				<embed id="sign" src="media/signature.svg">	
 			</object>
   		</div>
 	</div>
