--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
  <div id="name">
 
   		<object>
-			<embed id="name1" src="media/tttt.svg">	
+			<embed id="name1" src="media/title.svg">	
 			</object>
 
 
@@ -145,7 +145,7 @@ $("#am").click(function(e){
 	});
 
 
-	$("#home").click(function(e){
+	$("#am").click(function(e){
 			e.preventDefault();
 				$("#pic").delay(2700).animate({opacity:"1"}, {duration: 4000});
 				$("#name").animate({opacity:"0"}, {duration: 1000});
@@ -153,14 +153,14 @@ $("#am").click(function(e){
 				$("#name").animate({height:"8%"}, {duration: 1500});
 				$("#home").animate({left:"15%"}, {duration: 1000});
 				$("#home").animate({width:"70%"}, {duration: 1000});
-				$("#name").animate({left:"-36%"}, {duration: 2000});
+				$("#name").animate({left:"-30%"}, {duration: 2000});
 				$("#name").animate({top:"34%"}, {duration: 1500});
 			}else{
 				$(".crights").animate({zIndex:"1"}, {duration: 1500});
 				$(".terms").animate({zIndex:"1"}, {duration: 1500});
-				$("#name").animate({height:"8%"}, {duration: 1500});
-				$("#name").animate({left:"-30%"}, {duration: 2000});
-				$("#name").animate({top:"34%"}, {duration: 1500});
+				$("#name").animate({height:"6%"}, {duration: 1500});
+				$("#name").animate({left:"-17%"}, {duration: 2000});
+				$("#name").animate({top:"35%"}, {duration: 1500});
 			}
 
 				$("#name").animate({opacity:"1"}, {duration: 2500});
