--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Martin | Mutembei</title>
+	<title>Dj | Teenez</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -71,7 +71,7 @@
   <div id="am">Explore...</div>
   	<div id="texts">
 		<p id="content">
-			Alias Martin Mutembei, is Kenyan by Birth and by Experience. </br>
+			Dj Teenez, is Kenyan by Birth and by Experience. </br>
 			The Beautiful kind of Experiences. </br>
 			The kind of Experiences that makes you wanna Share.</br>
 			Not just the Music, but also the Love. Because Kenyans know how to Love. </br>
@@ -81,10 +81,11 @@
 			There is always an Experience worth Loving. </br>
 			An Experience we can Relate with Personally.</br>
 			Because Music touches the Soul. </br>
-			And on that Friday Evening, when you Host your Party, or Enter that club, </br>
-			Maybe Board that Lithiumnized Matatu, Perhaps HotBoxing with your Earphones,</br>
-			And You Lose yourself in the Voodoo of Sessions by Dj Teenez, Then</br>
-			You'll realize, you have waay too many soulmates.</br>
+			It Frees souls.And It Connect Souls. </br>
+			Prepare Yourself For a New Wave of Experiences. </br>
+			An Escape. A cool Paradise of Positive Vibrations.</br>
+			Because When You Lose yourself in the Voodoo of Sessions by Dj Teenez, Then</br>
+			You'll have a Taste of What it Means, To Be Truly Free.....</br>
 
 
 		</p>
@@ -136,17 +137,8 @@ $(document).ready(function(){
 
 
 
-$("#am").click(function(e){
-
-		e.preventDefault();
-
-
-
-	});
-
 
 	$("#am").click(function(e){
-			e.preventDefault();
 				$("#pic").delay(2700).animate({opacity:"1"}, {duration: 4000});
 				$("#name").animate({opacity:"0"}, {duration: 1000});
 				if (innerWidth > 750) {
