--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Dj | Teenez</title>
+	<title>Dj | Teenez &#174;</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -10,6 +10,8 @@
 
 	<link rel="stylesheet" href="media/style.css">
 	<link rel="stylesheet" href="media/et-line-font.css">
+	<link rel="icon" href="media/logoo.svg">
+
 	
 
 </head>
