--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
 	<div id="recmix">
 		<div id="rec">Recent...</div>
 
+
+		<div id="recscroll">
+
 		<div id="rec1">
 			<div id="rec1vid"></div>
 			
@@ -136,6 +139,7 @@
 			
 			<div id="rec3vid"></div>
 
+		</div>
 		</div>
 
 	</div>
