--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
  				 <li>&#9755;  Closed Parties</li></br>
  				 <li>&#9755;  House Parties</li></br>
  				 <li>&#9755;  Playlist Requests</li></br>
- 				 <li>&#9755;  Contact For Extra Services.</li></br>
+ 				 <li>&#9755;  Contact For Extras</li></br>
  				 	</ul> 
 			 	</div>
 
