--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="">
 
 	<link rel="stylesheet" href="media/style.css">
-	<link rel="stylesheet" href="media/et-line-font.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="icon" href="media/logoo.svg">
 
 	
@@ -214,7 +214,17 @@
 	
   	
 	<div id="ctcs">
-		<div id="social"></div>
+		<div id="social">
+			<ul id="social-icons">
+				<li><a><i class="fa fa-mixcloud" aria-hidden="true"></i></a></li>
+				<li><a><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
+				<li><a><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li><a><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+				<li><a><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+				<li><a><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+
+			</ul>
+		</div>
 		<div id="find">Find Me </br> On</div>
 
 	</div>
