--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		</div>
 	</div>
 </div>
-<div id="navleft">
+<!-- <div id="navleft">
 	<div id="hidhome">
 		<object id="home-ico">
 			<?xml version="1.0" encoding="utf-8"?>
@@ -214,7 +214,7 @@
 
 </div>
 
-
+ -->
 
 <div id ="bottomnav">
 	<div id ="copyrights">
