--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
 	$(document).ready(function(){
 			$("#pre-loader").fadeOut();
 			$("#topnav").fadeIn();
+			$("#navleft").fadeIn();
+
+		if (innerWidth < 750) {$("#navright").fadeIn();}	
+			
+			$("#middlebar").fadeIn();
+			$("#bottomnav").fadeIn();
 
 
 $("#developer").mouseover(function(){
