--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@ $("#developer").mouseover(function(){
 
 		if (innerWidth > 750) {
 
-		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #e6e600;}</style>');
+		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>');
 		}else{
-			$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #e6e600;}</style>')
+			$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>')
 	}
 
 });
@@ -273,10 +273,10 @@ $("#developer").mouseover(function(){
 
 		if (innerWidth > 750) {
 
-		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 30%;height: 1px;width: 70%;background: #e6e600;}</style>');
+		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 30%;height: 1px;width: 70%;background: #0099ff;}</style>');
 
 	}else{
-		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 0%;height: 1px;width: 100%;background: #e6e600;}</style>')
+		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 0%;height: 1px;width: 100%;background: #0099ff;}</style>')
 	}
 
 });
@@ -284,9 +284,9 @@ $("#developer").mouseover(function(){
 
 		if (innerWidth > 750) {
 
-		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #e6e600;}</style>');
+		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>');
 		}else{
-			$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #e6e600;}</style>')
+			$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>')
 	}
 
 });
