--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
 
 <div id ="middlebar">
 	<div id ="name">
-
+		<div id ="name-ico">
 			<?xml version="1.0" encoding="utf-8"?>
-				<svg id ="name-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+				<svg  id="name-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 			viewBox="0 0 200 100" style="enable-background:new 0 0 200 150;" xml:space="preserve">
 					<style type="text/css">
 						.st0z{fill:#fff;}
@@ -226,13 +226,16 @@
 						.st4z{font-size:14px;
 							font-weight:bold;
 							fill:#fff;}
+						.st7z{
+							fill:none;}
+
 					</style>
 						<text transform="matrix(1.4459 0 0 1 14 56.2173)" class="st0z st1z st2z">Dj | Teenez </text>
-						<rect x="182" y="27" class="st3" width="27" height="24"/>
+						<rect class="st7z" x="182" y="27" class="st3" width="27" height="24"/>
 						<text transform="matrix(1 0 0 1 182 37.2061)" class="st1z st4z">®</text>
 				</svg>
 
-
+		</div>
 	</div>
 	<div id ="explore">
 		<div id ="explore-ico">
