--- a/index.html
+++ b/index.html
@@ -238,9 +238,26 @@
 		</div>
 	</div>
 	<div id ="explore">
-		<div id ="explore-ico">
-			
+		<div id ="music-ico">
+			<div id ="music"><p></p></div>			
+			<div id ="music-sounds"><p></p></div>
+			<div id ="music-experiences"><p></p></div>
 		</div>
+
+		<div id ="travel-ico">
+			<div id ="travel"><p></p></div>
+			<div id ="travel-tours"><p></p></div>
+			<div id ="travel-sights"><p></p></div>
+
+		</div>
+
+		<div id ="Photography-ico">
+			<div id ="Photography"><p></p></div>
+			<div id ="Photography-nature"><p></p></div>
+			<div id ="Photography-clarity"><p></p></div>
+
+		</div>
+
 	</div>
 </div>
 
