--- a/index.html
+++ b/index.html
@@ -239,22 +239,22 @@
 	</div>
 	<div id ="explore">
 		<div id ="music-ico">
-			<div id ="music"><p></p></div>			
-			<div id ="music-sounds"><p></p></div>
-			<div id ="music-experiences"><p></p></div>
+			<div id ="music"><p id ="musicc">Music</p></div>			
+			<div id ="music-sounds"><p id ="sounds">Sounds</p></div>
+			<div id ="music-experiences"><p id ="experiences">Experiences</p></div>
 		</div>
 
 		<div id ="travel-ico">
-			<div id ="travel"><p></p></div>
-			<div id ="travel-tours"><p></p></div>
-			<div id ="travel-sights"><p></p></div>
+			<div id ="travel"><p id ="travell">Travel</p></div>
+			<div id ="travel-tours"><p id ="tours">Tours</p></div>
+			<div id ="travel-sights"><p id ="sights">Sights</p></div>
 
 		</div>
 
 		<div id ="Photography-ico">
-			<div id ="Photography"><p></p></div>
-			<div id ="Photography-nature"><p></p></div>
-			<div id ="Photography-clarity"><p></p></div>
+			<div id ="Photography"><p id ="Photographyy">Photography</p></div>
+			<div id ="Photography-nature"><p id ="nature">Nature</p></div>
+			<div id ="Photography-clarity"><p id ="clarity">Clarity</p></div>
 
 		</div>
 
