--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@ $("#developer").mouseover(function(){
 
 		if (innerWidth > 750) {
 
-		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 30%;height: 1px;width: 70%;background:#0099ff;}</style>');
+		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 30%;height: 1px;width: 70%;background:#ffff00;}</style>');
 
 	}else{
-		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 0%;height: 1px;width: 100%;background:#0099ff;}</style>')
+		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 0%;height: 1px;width: 100%;background:#ffff00;}</style>')
 	}
 
 });
@@ -308,9 +308,9 @@ $("#developer").mouseover(function(){
 
 		if (innerWidth > 750) {
 
-		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>');
+		$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #ffff00;}</style>');
 		}else{
-			$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>')
+			$('head').append('<style>#developer::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #ffff00;}</style>')
 	}
 
 });
@@ -321,10 +321,10 @@ $("#developer").mouseover(function(){
 
 		if (innerWidth > 750) {
 
-		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 30%;height: 1px;width: 70%;background: #0099ff;}</style>');
+		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 30%;height: 1px;width: 70%;background: #ffff00;}</style>');
 
 	}else{
-		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 0%;height: 1px;width: 100%;background: #0099ff;}</style>')
+		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 0%;height: 1px;width: 100%;background: #ffff00;}</style>')
 	}
 
 });
@@ -332,9 +332,9 @@ $("#developer").mouseover(function(){
 
 		if (innerWidth > 750) {
 
-		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>');
+		$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #ffff00;}</style>');
 		}else{
-			$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #0099ff;}</style>')
+			$('head').append('<style>#terms::after{position: absolute; top: 80%;left: 100%;height: 1px;width: 0%;background: #ffff00;}</style>')
 	}
 
 });
