--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
 		<div id ="name-ico">
 			<?xml version="1.0" encoding="utf-8"?>
 				<svg  id="name-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 			viewBox="0 0 200 100" style="enable-background:new 0 0 200 150;" xml:space="preserve">
+	 			viewBox="0 0 230 150" style="enable-background:new 0 0 200 150;" xml:space="preserve">
 					<style type="text/css">
 						.st0z{fill:#fff;}
 						.st1z{font-family:'Elephant-Regular';}
-						.st2z{font-size:24px;
+						.st2z{font-size:30px;
 						font-weight:bold;
 						}
 						.st3z{fill:none;}
@@ -230,9 +230,9 @@
 							fill:none;}
 
 					</style>
-						<text transform="matrix(1.4459 0 0 1 14 56.2173)" class="st0z st1z st2z">Dj | Teenez </text>
+						<text transform="matrix(1.4459 0 0 1 14 86.2173)" class="st0z st1z st2z">Dj | Teenez </text>
 						<rect class="st7z" x="182" y="27" class="st3" width="27" height="24"/>
-						<text transform="matrix(1 0 0 1 182 37.2061)" class="st1z st4z">®</text>
+						<text transform="matrix(1 0 0 1 222 67.2061)" class="st1z st4z">®</text>
 				</svg>
 
 		</div>
@@ -291,6 +291,12 @@
 			
 			$("#middlebar").fadeIn();
 			$("#bottomnav").fadeIn();
+
+
+
+			$("#name-svg").delay(2000).animate({top:"50%"});
+
+			$("#defs-ico").delay(2000).animate({top:"0%"});
 
 
 $("#developer").mouseover(function(){
